# spark-cli

./: Cargo.toml  README.md  docker-compose.yml  sync-init.yaml
.github/workflows/: integration.yml
postgres/: init.sql
scripts/: analyze_users.py  count-age.sh  gold_daily_revenue.py  livy-practice.sh  silver_orders.py  test-integration.sh
spark/: Dockerfile  start-with-livy.sh
src/: gantt.rs  main.rs  notify.rs  webhdfs.rs
src/client/: mod.rs
src/commands/: diag.rs  fs.rs  job.rs  mod.rs  profile.rs  repl.rs  session.rs  sql.rs
src/config/: mod.rs
src/output/: mod.rs
src/testing/: helpers.rs  integ_env.rs  mock_livy.rs  mod.rs
src/tests/: client_unit.rs  iceberg_snapshots.rs  mod.rs  spark_curation.rs  write_modes.rs
