[package]
name = "spark-ctrl"
version = "0.1.0"
edition = "2021"
description = "Spark Control Plane CLI"

[[bin]]
name = "spark-ctrl"
path = "src/main.rs"

[dependencies]
tokio      = { version = "=1.52.1",  features = ["full"] }
serde      = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
minreq     = { version = "2",        features = ["json-using-serde"] }
anyhow     = "1"
toml       = "=0.5.11"
dirs       = "=5.0.1"
colored    = "=2.2.0"
indicatif  = "=0.17.11"
tabled     = "=0.14.0"
chrono     = { version = "=0.4.44", features = ["serde"] }
clap       = { version = "=4.4.18", features = ["derive", "env", "color"] }
base64     = "=0.21.7"

[dev-dependencies]
# Async test runtime (same tokio already in [dependencies] — just the macro)
tokio      = { version = "=1.52.1", features = ["full", "test-util"] }
# Pretty assertion diffs
pretty_assertions = "1"

# Integration tests are gated behind this feature so `cargo test` alone runs
# only unit tests.  Use `cargo test --features integration` (or the CI job) to
# bring up the full docker-compose stack and run end-to-end scenarios.
[features]
integration = []
